# devworld-airflow

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  HARNESS_DESIGN.md  Makefile  cmux_guide.md  docker-compose.yml  entrypoint.sh  host=localhost port=5433 dbname=airflow_db user=airflow password=airflow.wal  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/agents/: airflow-pipeline.md  airflow-runtime.md  architect.md  code-reviewer.md  data-engineer.md  github-enrichment-engineer.md  github-source-engineer.md  infra-engineer.md  platform-lead.md  qa-engineer.md
.claude/rules/: dags.md  dbt.md  dlt.md  github.md  infra.md  storage.md
config/: airflow.env  connections.json  github_repos.yml  sources.yml  variables.json
dags/: ai_enrich_dag.py  assets.py  blog_crawl_all_dag.py  blog_crawl_dag.py  common.py  dbt_gold_dag.py  dbt_silver_dag.py  dbt_transform_dag.py  dlt_load_dag.py  github_ai_enrich_dag.py  github_collect_dag.py  github_dbt_gold_dag.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
docs/: AWS_DEPLOYMENT_GUIDE.md  RESUME.md  architecture.md  auth-manager-guide.md  data-schema.md  infra-architecture.md  medallion-best-practice.md
docs/reviews/: 01-airflow-review.md  (+8 more)
scripts/: duckdb-ui.py  entrypoint.sh  init-connections.sh  init-db.sql
terraform/: alb.tf  cloudwatch.tf  ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  rds.tf  secrets.tf  security_groups.tf  terraform.tfvars  terraform.tfvars.example  tfplan  variables.tf  vpc-endpoints.tf  vpc.tf
tests/: conftest.py
(+87 files in other folders)
