[project]
name = "devworld-airflow"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit tests (fast, no external dependencies)",
    "integration: integration tests (may require Airflow, DB, etc.)",
]
pythonpath = ["."]
addopts = "-v --strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "dags", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
